// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot: all-sha > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: write
  pull-requests: write
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4.1.7
      - uses: egonSchiele/run-agency-action@2a3030d846ce45a7c9d5eafad345e86db4f83a38  # v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          FOO: \${{ secrets.FOO }}
"
`;

exports[`snapshot: all-tag > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: write
  pull-requests: write
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4.1.7
      - uses: egonSchiele/run-agency-action@v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          FOO: \${{ secrets.FOO }}
"
`;

exports[`snapshot: readonly-sha > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: read
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4.1.7
      - uses: egonSchiele/run-agency-action@2a3030d846ce45a7c9d5eafad345e86db4f83a38  # v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`snapshot: readonly-tag > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: read
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4.1.7
      - uses: egonSchiele/run-agency-action@v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`snapshot: with-secrets-sha > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: read
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4.1.7
      - uses: egonSchiele/run-agency-action@2a3030d846ce45a7c9d5eafad345e86db4f83a38  # v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          FOO: \${{ secrets.FOO }}
          BAR: \${{ secrets.BAR }}
"
`;

exports[`snapshot: with-secrets-tag > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: read
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4.1.7
      - uses: egonSchiele/run-agency-action@v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
          FOO: \${{ secrets.FOO }}
          BAR: \${{ secrets.BAR }}
"
`;

exports[`snapshot: write-sha > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: write
  pull-requests: write
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11  # v4.1.7
      - uses: egonSchiele/run-agency-action@2a3030d846ce45a7c9d5eafad345e86db4f83a38  # v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`snapshot: write-tag > matches snapshot 1`] = `
"# Generated by \`agency schedule add\`. Edit freely.
# Action SHAs are pinned. Re-run \`agency schedule add --force\` after upgrading agency-lang to refresh.
name: snap
on:
  schedule:
    - cron: '0 * * * *'
  workflow_dispatch:
permissions:
  contents: write
  pull-requests: write
concurrency:
  group: agency-\${{ github.workflow }}
  cancel-in-progress: false
jobs:
  run:
    runs-on: ubuntu-24.04
    steps:
      - uses: actions/checkout@v4.1.7
      - uses: egonSchiele/run-agency-action@v1.0.2
        with:
          file: agents/foo.agency
        env:
          OPENAI_API_KEY: \${{ secrets.OPENAI_API_KEY }}
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
"
`;
